tests/sksl/errors/ArrayOfVoidInStruct.dsl.glsl
### Compilation failed:

error: expected integer literal, but found '['
error: expected an integer array size
error: expected a type, but found '2'
3 errors
